# cmake-small-project-template

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
apps/HelloWorld/: CMakeLists.txt
apps/HelloWorld/src/: main.cpp
apps/HelloWorld/test/src/: test_AppHelloWorld.cpp
ci/: deploy.sh
cmake/: build-docs.cmake  c++-config.cmake  enable-ccache.cmake  find-boost.cmake  find-gtest.cmake  helpers.cmake  project-target.cmake
cmake/doxygen/: doxygen.cmake
docs/: build_docs.sh  doxygen.config.in  mkdocs.yml
docs/docs/: extra.css  index.md  reference.md
docs/docs/apps/: HelloWorld.md
docs/docs/cmake/: concepts.md  general.md
docs/docs/doxygen/: doxygen.md
docs/docs/tools/: ci.md
